--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -2,6 +2,8 @@
     display: flex;
     height: 100%;
     flex-direction: column;
+    background-color: #3182B9;
+    font-family: Montserrat;
     
 }
 .logoContainer{
@@ -12,9 +14,28 @@
 }
 .loginPageWrapper{
     flex:2;
-    padding:20px
+    padding:30px;
 }
-.logo{
-    font-size: 30px;
-    font-weight: bold;
+.body-header-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.body-header-wrapper .body-header-text-wrapper {
+    color:#FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+}
+.body-header-wrapper .body-header-text-wrapper .header-bold {
+    font-size: 18px;
+    font-weight: 500;
+    padding-left: 5px;
+}
+.body-header-wrapper .body-header-text-wrapper  .welcome_text {
+    font-size: 14px;
+}
+.header-grid {
+    width:100%;
 }
