--- a/src/components/Input/InputText.css
+++ b/src/components/Input/InputText.css
@@ -10,6 +10,9 @@ ion-item {
     background-color: #3182B9;
 }
 .input-floating-label {
-    font-size: 14px !important;
-    font-family: Montserrat !important;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFFFFF;
   }
