--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -1,18 +1,12 @@
-.loginContainer{
+.container{
     display: flex;
     height: 100%;
     flex-direction: column;
     background-color: #3182B9;
-    
 }
-.logoContainer{
-    flex:1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.loginPageWrapper{
-    flex:2;
+
+.page-wrapper{
+    flex:10;
     padding:30px;
 }
 .body-header-wrapper {
@@ -38,13 +32,7 @@
 .header-grid {
     width:100%;
 }
-.linkText {
-   font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 15px;
-    color: #FFFFFF;
-    float:right;
-    margin-right: 5px;
-    margin-top:8px;
+.container .list-md .list-ios {
+    background: none;
 }
+
