--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,50 +1,50 @@
-.loginContainer{
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    background-color: #3182B9;
-    
+.loginContainer {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  background-color: #3182b9;
 }
-.logoContainer{
-    flex:1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.logoContainer {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.loginPageWrapper{
-    flex:2;
-    padding:30px;
+.loginPageWrapper {
+  flex: 2;
+  padding: 30px;
 }
 .body-header-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .body-header-wrapper .body-header-text-wrapper {
-    color:#FFFFFF;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 50px;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
 }
 .body-header-wrapper .body-header-text-wrapper .header-bold {
-    font-size: 18px;
-    font-weight: 500;
-    padding-left: 5px;
+  font-size: 18px;
+  font-weight: 500;
+  padding-left: 5px;
 }
-.body-header-wrapper .body-header-text-wrapper  .welcome_text {
-    font-size: 14px;
+.body-header-wrapper .body-header-text-wrapper .welcome_text {
+  font-size: 14px;
 }
 .header-grid {
-    width:100%;
+  width: 100%;
 }
 .linkText {
-   font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 15px;
-    color: #FFFFFF;
-    float:right;
-    margin-right: 5px;
-    margin-top:8px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  color: #ffffff;
+  float: right;
+  margin-right: 5px;
+  line-height: 15px;
+  margin-top: 8px;
 }
