--- a/src/pages/Accounts/Current/Current.scss
+++ b/src/pages/Accounts/Current/Current.scss
@@ -1,10 +1,10 @@
 .ion-page {
     background-color: #3182B9;
 }
-.fixed-account-wrapper {
+.current-account-wrapper {
     .page-wrapper{
         background-color: #3182B9;
-        height:auto;
+        height:100%;
         .page-inner-wrapper{
             .page-header-label{
                 display: flex;
