--- a/src/pages/Accounts/Saving/Saving.scss
+++ b/src/pages/Accounts/Saving/Saving.scss
@@ -1,7 +1,7 @@
 .ion-page {
     background-color: #3182B9;
 }
-.fixed-account-wrapper {
+.saving-account-wrapper {
     .page-wrapper{
         background-color: #3182B9;
         height:auto;
@@ -21,7 +21,7 @@
         .page-content-wrapper{
             padding : 30px;
             
-            .section-1, .section-2 {
+            .section-1, .section-2, .section-3 {
                 padding-top: 10%;
                 .sections-heading{
                     color:#ffffff;
