--- a/src/components/Input/InputText.css
+++ b/src/components/Input/InputText.css
@@ -1,7 +1,8 @@
 ion-item {
     --background: #3182B9;
-    
+    --color: #ffffff;
 }
+
 .item-native {
     border-bottom-color: #FFFFFF;
     border-bottom-width: 100px !important;
