All Page of Fund Section

--- a/src/components/Input/InputText.css
+++ b/src/components/Input/InputText.css
@@ -1,18 +1,18 @@
 ion-item {
-    --background: #3182B9;
-    
+  --background: #3182b9;
 }
 .item-native {
-    border-bottom-color: #FFFFFF;
-    border-bottom-width: 100px !important;
+  border-bottom-color: #ffffff;
+  border-bottom-width: 100px !important;
 }
 .login-fileds-list-wrapper {
-    background-color: #3182B9;
+  background-color: #3182b9;
+  --font-family: "Montserrat";
 }
 .input-floating-label {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 17px;
-    color: #FFFFFF;
-  }
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #ffffff;
+}
