--- a/src/pages/BankS/BankS.scss
+++ b/src/pages/BankS/BankS.scss
@@ -2,14 +2,19 @@
   display: flex;
   display: flex;
   height: 100%;
+
   flex-direction: column;
   background-color: #3182b9;
 }
+
 .container .header-text-area {
   display: flex;
   padding-left: 30px;
-  margin-top: 65px;
+  margin-top: 20px;
   color: #ffffff;
+}
+.page-wrapper {
+  margin-top: 30px;
 }
 .header-text-bottom {
   display: flex;
@@ -18,4 +23,13 @@
   margin-top: 15px;
   font-size: small;
   color: #ffffff;
+}
+.header-grid {
+  width: 100%;
+}
+.ion-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 70px;
 }
