--- a/src/components/Checkbox/Checkbox.css
+++ b/src/components/Checkbox/Checkbox.css
@@ -1,17 +1,24 @@
 .inputWrapper .terms-label {
-    font-weight: normal;
-    font-size: 12px;
-    color: #FFFFFF;
-    margin-left: 10px;
+  font-weight: normal;
+  font-size: 12px;
+  --font-family: "Montserrat";
+  color: #ffffff;
+  margin-left: 10px;
 }
 .inputWrapper ion-checkbox {
-    --border-radius : 0px;
-    margin: 0px;
-    width: 18px;
-    height: 18px; 
-    --background-checked : #FFFFFF; 
-    --checkmark-color:#3182B9;
-    --checkmark-width :3px;
-    --border-color-checked : #FFFFFF;
-    --border-color : #FFFFFF;        
+  --border-radius: 0px;
+  margin: 0px;
+  width: 18px;
+  height: 18px;
+  --background-checked: #ffffff;
+  --checkmark-color: #3182b9;
+  --checkmark-width: 3px;
+  --border-color-checked: #ffffff;
+  --border-color: #ffffff;
+  --font-family: "Montserrat";
+}
+
+.ion-margin-top {
+  padding-bottom: 0px;
+  padding-top: 0px;
 }
