--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,14 +1,15 @@
-
 .header-wrapper {
-    ion-toolbar  {
-        --background: #004777;
-        border-bottom-left-radius: 20px 20px;
-        border-bottom-right-radius: 20px 20px;
-        border:none;
-        height : 50px;
-    }
-    ion-text {
-        color: #ffffff;
-    }
-    
+  ion-toolbar {
+    --background: #004777;
+    border-bottom-left-radius: 20px 20px;
+    border-bottom-right-radius: 20px 20px;
+    border: none;
+    height: 50px;
+  }
+  ion-text {
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
