--- a/src/components/Radio/Radio.scss
+++ b/src/components/Radio/Radio.scss
@@ -1,5 +1,10 @@
 .radio-wrapper {
-    ion-radio {
-        --color-checked : #ffffff; 
-    }
+  ion-radio {
+    --color-checked: #ffffff;
+    --font-family: "Montserrat";
+  }
+  .ion-margin-start {
+    color: #ffffff;
+    font-size: 14px;
+  }
 }
