--- a/src/components/Select/Select.css
+++ b/src/components/Select/Select.css
@@ -1,16 +1,19 @@
 .wrapper .list-wrapper .gender-label {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 17px;
-    color: #FFFFFF;
+  font-style: normal;
+  font-weight: normal;
+  font-family: "Montserrat";
+  font-size: 14px;
+  line-height: 17px;
+  color: #ffffff;
 }
-
-
+.list-wrapper {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
 ion-select::part(text) {
-    color: #FFFFFF;
+  color: #ffffff;
 }
 ion-select::part(icon) {
-    color: #FFFFFF;
-    opacity: 0.8;
+  color: #ffffff;
+  opacity: 0.8;
 }
