Css change in fund Transfer page

--- a/src/pages/Accounts/Fixed/Fixed.scss
+++ b/src/pages/Accounts/Fixed/Fixed.scss
@@ -7,7 +7,7 @@
   padding-top: 0px;
 }
 .fixed-account-wrapper {
-  .page-wrapper {
+  .fixed-wrapper {
     background-color: #3182b9;
     height: 100%;
     .page-inner-wrapper {
@@ -20,7 +20,7 @@
         }
       }
     }
-    .page-content-wrapper {
+    .fixed-content-wrapper {
       padding: 30px;
       background-color: #3182b9;
       color: #ffffff;
