--- a/src/pages/CoOperativeS/CoOperativeS.scss
+++ b/src/pages/CoOperativeS/CoOperativeS.scss
@@ -13,8 +13,9 @@
   margin-top: 20px;
   color: #ffffff;
 }
-.page-wrapper {
-  margin-top: 30px;
+.cops-wrapper {
+  padding: 30px;
+  background-color: #3182b9;
 }
 .header-text-bottom {
   display: flex;
