--- a/src/pages/CoOperative/CoOperative.scss
+++ b/src/pages/CoOperative/CoOperative.scss
@@ -2,7 +2,6 @@
   display: flex;
   display: flex;
   height: 100%;
-
   flex-direction: column;
   background-color: #3182b9;
 }
@@ -13,8 +12,10 @@
   margin-top: 20px;
   color: #ffffff;
 }
-.page-wrapper {
-  margin-top: 30px;
+
+.cop-wrapper {
+  background-color: #3182b9;
+  padding: 30px;
 }
 .header-text-bottom {
   display: flex;
