--- a/src/pages/Fund/Fund.scss
+++ b/src/pages/Fund/Fund.scss
@@ -2,15 +2,23 @@
   display: flex;
   display: flex;
   height: 100%;
-
   flex-direction: column;
   background-color: #3182b9;
 }
 
+.container .fund-wrapper {
+  padding: 30px;
+  margin-top: 80px;
+}
 .container .header-text-area {
   display: flex;
   padding-left: 30px;
   margin-top: 65px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
   color: #ffffff;
 }
 .header-text-bottom {
