--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -64,4 +64,11 @@
     margin-top: 40px;
     background-color: lightgrey;
   }
+  .triangle-left {
+    width: 0;
+    height: 0;
+    border-top: 25px solid transparent;
+    border-right: 50px solid #555;
+    border-bottom: 25px solid transparent;
+  }
 }
