fixing issue on Android and ios for implemented page

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,8 +4,14 @@
     border-bottom-left-radius: 15px 15px;
     border-bottom-right-radius: 15px 15px;
     border: none;
-    height: 50px;
+    ion-back-button {
+      font-size: 10px;
+      position: absolute;
+      left: 15px;
+      color: #ffffff;
+    }
   }
+
   ion-text {
     color: #ffffff;
     display: flex;
