--- a/src/components/Loans/Loans.scss
+++ b/src/components/Loans/Loans.scss
@@ -2,4 +2,15 @@
   ion-row {
     margin-top: 10px;
   }
+  .loan-list-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 10px;
+    justify-content: space-between;
+    width: 100%;
+    div {
+      text-align: center;
+      padding: 20px 0;
+    }
+  }
 }
