--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,4 +1,30 @@
 .home-wrapper {
+  .balance-check-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    .common-ion-text {
+      width: 158px;
+      height: 24px;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      font-family: Montserrat;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 10px;
+      line-height: 12px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .balance-wrapper-text {
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 10px;
+        line-height: 12px;
+      }
+    }
+  }
   .page-content-wrapper {
     background-color: #3182b9;
   }
@@ -16,7 +42,7 @@
     .services-options-wrapper {
       position: absolute;
       bottom: 0px;
-      height: 280px;
+      height: 250px;
       transition: height 0.25s ease-in;
       width: 100%;
       max-height: 600px;
@@ -25,18 +51,38 @@
         height: 100%;
         background-color: #ffff;
         border-radius: 30px 30px 0px 0px;
+        .close-bar-icon {
+          display: flex;
+          justify-content: center;
+          margin-bottom: 10px;
+          button {
+            background-color: transparent;
+            border: none;
+          }
+          button:focus {
+            outline: 0;
+            outline-style: none;
+            outline-width: 0;
+          }
+        }
         .iconButtons {
           background-color: rgb(255, 255, 255);
           display: flex;
+          position: relative;
           flex-direction: column;
           justify-content: center;
           align-items: center;
           font-size: 10px;
           ion-text {
-            margin-top: 55px;
+            margin-top: 25px;
             position: absolute;
             width: 50px;
           }
+        }
+        button:focus {
+          outline: 0;
+          outline-style: none;
+          outline-width: 0;
         }
       }
       ion-card {
@@ -46,10 +92,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        bottom: 10px;
-        position: relative;
+        position: absolute;
+        width: 100%;
+        left: 0;
         ion-button {
-          width: 80px;
+          width: 90px;
           height: 20px;
           font-size: 10px;
         }
@@ -61,8 +108,8 @@
     }
   }
   hr {
-    margin-top: 40px;
     background-color: lightgrey;
+    margin-top: 15px;
   }
   .triangle-left {
     width: 0;
