--- a/src/pages/Agent/Agent.scss
+++ b/src/pages/Agent/Agent.scss
@@ -2,11 +2,11 @@
   display: flex;
   display: flex;
   height: 100%;
-
+  padding-left: 28px;
+  padding-right: 28px;
   flex-direction: column;
   background-color: #3182b9;
 }
-
 .container .header-text-area {
   display: flex;
   padding-left: 30px;
