--- a/src/pages/CoOperativeS/CoOperativeS.scss
+++ b/src/pages/CoOperativeS/CoOperativeS.scss
@@ -1,43 +1,48 @@
-.container {
+.coOperativeDetails-container {
   display: flex;
   display: flex;
   height: 100%;
-
   flex-direction: column;
   background-color: #3182b9;
-}
+  .coOperativeDetails-text-area {
+    display: flex;
+    padding-left: 30px;
+    margin-top: 20px;
+    color: #ffffff;
+  }
+  .coOperativeDetails-wrapper {
+    padding-left: 28px;
+    padding-right: 28px;
+    padding-top: 20px;
 
-.container .header-text-area {
-  display: flex;
-  padding-left: 30px;
-  margin-top: 20px;
-  color: #ffffff;
-}
-.cops-wrapper {
-  padding: 30px;
-  background-color: #3182b9;
-}
-.header-text-bottom {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 15px;
-  font-size: small;
-  color: #ffffff;
-}
-.header-grid {
-  width: 100%;
-}
-.ion-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 70px;
-}
-.button-line {
-  display: flex;
-  flex-shrink: 2;
-  margin-left: 35px;
-  width: 100%;
-  margin-right: 50px;
+    .coOperativeDetails-header-text {
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 500;
+      line-height: 12px;
+      margin-bottom: 5px;
+      color: #ffffff;
+      opacity: 0.5;
+      .agent_text {
+        margin-top: 5px;
+      }
+    }
+    .coOperativeDetails-button {
+      margin-top: 40px;
+    }
+    .coOperativeDetails-message {
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 17px;
+      /* identical to box height */
+      margin-top: 5px;
+      margin-bottom: 15px;
+      color: #ffffff;
+      .nameMessage {
+        margin-bottom: 10px;
+      }
+    }
+  }
 }
