--- a/src/pages/CoOperative/CoOperative.scss
+++ b/src/pages/CoOperative/CoOperative.scss
@@ -4,39 +4,25 @@
   height: 100%;
   flex-direction: column;
   background-color: #3182b9;
-}
+  .coperative-text-area {
+    display: flex;
+    padding: 0px;
+    margin-top: 20px;
+    color: #ffffff;
+  }
+  .coperative-wrapper {
+    margin-top: 10px;
+    background-color: #3182b9;
+  }
 
-.container .header-text-area {
-  display: flex;
-  padding: 0px;
-  margin-top: 20px;
-  color: #ffffff;
-}
-.container .cop-wrapper {
-  margin-top: 30px;
-  background-color: #3182b9;
-}
-.header-text-bottom {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 15px;
-  font-size: small;
-  color: #ffffff;
-}
-.header-grid {
-  width: 100%;
-}
-.ion-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 70px;
-}
-.button-line {
-  display: flex;
-  flex-shrink: 2;
-  margin-left: 35px;
-  width: 100%;
-  margin-right: 50px;
+  .coperative-clear-button {
+    width: 100px;
+    float: left;
+    margin-top: 10px;
+  }
+  .coperative-proceed-button {
+    width: 100px;
+    float: right;
+    margin-top: 10px;
+  }
 }
