Utility Section and Loan Section

--- a/src/pages/Utilitys/UtilityAntivirus/Antivirus/Antivirus.scss
+++ b/src/pages/Utilitys/UtilityAntivirus/Antivirus/Antivirus.scss
@@ -5,18 +5,17 @@
   padding-right: 28px;
   flex-direction: column;
   background-color: #3182b9;
-  .loan-type-text-area {
+  .antivirus-text-area {
     font-style: normal;
     font-size: 16px;
     line-height: 20px;
     color: #ffffff;
     margin-top: 30px;
   }
-  .loan-type-wrapper {
-    margin-top: 40px;
+  .antivirus-wrapper {
+    margin-top: 20px;
   }
-  .loanType-btn {
-    margin-top: 90px;
-    font-family: "Montserrat";
+  .antivirus-btn {
+    margin-top: 30px;
   }
 }
