--- a/src/components/Accordion/Accordion.scss
+++ b/src/components/Accordion/Accordion.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   ion-button {
-    width: 305px;
+    width: 100%;
     height: 31px;
     --background: #004777;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -15,12 +15,14 @@
   .is-shown {
     width: 100%;
     background-color: #ffffff;
-    height: 200px;
+    border-radius: 8px;
+
+    height: 154px;
     transition: height 0.25s ease-in;
   }
   .is-hidden {
     height: 0px;
     transition: height 0.25s ease-out;
-    width: 0px;
+    width: 100%;
   }
 }
