--- a/src/pages/Utilitys/InternetPayment/InternetPayment.scss
+++ b/src/pages/Utilitys/InternetPayment/InternetPayment.scss
@@ -5,18 +5,14 @@
   padding-right: 28px;
   flex-direction: column;
   background-color: #3182b9;
-  .loan-type-text-area {
+  .InternetPayment-text-area {
     font-style: normal;
     font-size: 16px;
     line-height: 20px;
     color: #ffffff;
     margin-top: 30px;
   }
-  .loan-type-wrapper {
-    margin-top: 40px;
-  }
-  .loanType-btn {
-    margin-top: 90px;
-    font-family: "Montserrat";
+  .InternetPayment-wrapper {
+    margin-top: 20px;
   }
 }
