Added new pages

--- a/src/pages/Map/MapView.scss
+++ b/src/pages/Map/MapView.scss
@@ -5,5 +5,10 @@
   .leaflet-container {
     height: 100%;
     width: 100%;
+    .leaflet-control-container {
+      position: absolute;
+      bottom: 93px;
+      right: 59px;
+    }
   }
 }
