--- a/src/pages/NotificationPage/NotificationPage.scss
+++ b/src/pages/NotificationPage/NotificationPage.scss
@@ -1,56 +1,54 @@
-.container-notification {
-  display: flex;
+.notification-wrapper {
+  background-color: #ffffff;
   height: 100%;
-  flex-direction: column;
-  background-color: #ffff;
-  padding: 30px;
-  .notification-text-area {
-    font-family: "Montserrat";
-    font-style: normal;
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 22px;
-    margin-top: 40px;
-    color: #000000;
+  padding: 5px;
+  .page-header-text {
+    margin-top: 15px;
+    margin-left: 13px;
   }
-  .notification-today-text {
-    font-family: "Montserrat";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 10px;
-    color: #000000;
-    margin-top: 20px;
-    opacity: 1;
+  .notification-cards-wrapper {
+    margin-top: 50px;
+    padding-bottom: 5px;
+    ion-card {
+      height: 59px;
+      background: #ffffff;
+      box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
+      border-radius: 5px;
+      font-size: 16px;
+      line-height: 1.4;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      .card-body-wrapper {
+        display: inline-flex;
+        margin-top: 5px;
+        .bar {
+          background-color: #3182b9;
+          width: 3px;
+          height: 40px;
+          position: fixed;
+        }
+        .notification-text {
+          margin-left: 10px;
+          font-family: Montserrat;
+          font-style: normal;
+          font-weight: 600;
+          font-size: 12px;
+          line-height: 15px;
+          color: #000000;
+          p {
+            font-family: Montserrat;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 13px;
+            line-height: 12px;
+            color: #000000;
+            opacity: 0.5;
+            margin-top: 5px;
+          }
+        }
+      }
+    }
   }
-  .notification-area {
-    position: relative;
-    font-family: "Montserrat";
-    background-color: #ffff;
-    width: 100%;
-  }
-  .notificationdate {
-    margin-left: 15px;
-    color: #000000;
-  }
-  .notificationtime {
-    margin-left: 15px;
-    color: #000000;
-  }
-  .notificationMessage {
-    font-family: "Montserrat";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 10px;
-    line-height: 12px;
-    margin-left: 15px;
-    color: #000000;
-    opacity: 0.5;
-  }
-}
-.container-notification .notification-area .notification-content .vl {
-  background-color: #3182b9;
-  width: 2px;
-  height: 40px;
-  position: fixed;
 }
