--- a/src/pages/Utilitys/InternetPayment/InternetPayment.scss
+++ b/src/pages/Utilitys/InternetPayment/InternetPayment.scss
@@ -11,6 +11,7 @@
     line-height: 20px;
     color: #ffffff;
     margin-top: 30px;
+    margin-bottom: 30px;
   }
   .InternetPayment-wrapper {
     margin-top: 20px;
