--- a/src/pages/Mpin/Mpin.scss
+++ b/src/pages/Mpin/Mpin.scss
@@ -1,3 +1,19 @@
+.skip_btn_container {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  position: absolute;
+  margin-top: 30px;
+  right: 21px;
+  .btn-skip {
+    background-color: transparent;
+    font-size: 15px;
+    letter-spacing: 0.5px;
+    outline: none;
+    border: none;
+  }
+}
+
 .mpin-container {
   display: flex;
   justify-content: center;
