added back navigation and other features

--- a/src/components/Input/InputText.scss
+++ b/src/components/Input/InputText.scss
@@ -17,12 +17,12 @@
     font-size: 14px;
     line-height: 17px;
     color: #ffffff;
-    font-family: "Montserrat" !important;
+    font-family: "Montserrat", sans-serif;
   }
   ion-input {
-    font-family: "Montserrat" !important;
     --placeholder-color: #ffffff;
     --color: #ffffff;
+    font-family: "Montserrat", sans-serif;
   }
 
   .eye-btn {
