--- a/src/pages/ResetPassword/ResetPassword.scss
+++ b/src/pages/ResetPassword/ResetPassword.scss
@@ -1,4 +1,4 @@
-.password-reset-container {
+.password-container {
   display: flex;
   display: flex;
   height: 100%;
@@ -11,7 +11,6 @@
     align-items: center;
     margin-top: 50px;
     font-size: 14px;
-    font-family: "Montserrat";
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
@@ -32,7 +31,6 @@
     .innercontainer {
       width: 220px;
       text-align: center;
-      font-family: "Montserrat";
     }
   }
   .input-container {
@@ -42,6 +40,5 @@
 
   .confirm-btn-wrapper {
     padding: 25px;
-    font-family: "Montserrat";
   }
 }
