--- a/src/pages/Routes.scss
+++ b/src/pages/Routes.scss
@@ -1,7 +1,7 @@
 body {
-  font-family: "Montserrat";
 }
 ion-content {
+  font-family: "Montserrat", sans-serif;
   .inner-scroll scroll-y overscroll {
     padding: 0px !important;
   }
