--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,11 +1,11 @@
 .btn-elem {
   --background: #004777;
-  --font-family: "Montserrat";
   --box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   --border-radius: 10px;
   --line-height: 17px;
   --font-style: normal;
   --color: #ffffff;
   --font-weight: 500;
+  font-family: "Montserrat", sans-serif;
   height: 30px;
 }
