--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -2,9 +2,9 @@
   .terms-label {
     font-weight: normal;
     font-size: 14px;
-    font-family: "Montserrat" !important;
     color: #ffffff;
     margin-left: 10px;
+    font-family: "Montserrat", sans-serif;
   }
   ion-checkbox {
     --border-radius: 0px;
@@ -16,7 +16,6 @@
     --checkmark-width: 3px;
     --border-color-checked: #ffffff;
     --border-color: #ffffff;
-    --font-family: "Montserrat";
   }
 
   .ion-margin-top {
