--- a/src/components/Radio/Radio.scss
+++ b/src/components/Radio/Radio.scss
@@ -1,7 +1,9 @@
 .radio-wrapper {
+  ion-text {
+    font-family: "Montserrat", sans-serif;
+  }
   ion-radio {
     --color-checked: #ffffff;
-    --font-family: "Montserrat";
   }
   .ion-margin-start {
     color: #ffffff;
