--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -3,6 +3,8 @@
   height: 100%;
   flex-direction: column;
   background-color: #3182b9;
+  --ion-font-family: "Montserrat" !important;
+  font-family: "Montserrat", sans-serif;
 
   .logoContainer {
     flex: 1;
