--- a/src/components/BackButton/BackButton.scss
+++ b/src/components/BackButton/BackButton.scss
@@ -5,7 +5,7 @@
   ion-button {
     --background: transparent;
     border: none;
-    box-shadow: none;
+    --box-shadow: none;
     outline: none;
   }
 }
