--- a/src/pages/NotificationPage/NotificationPage.scss
+++ b/src/pages/NotificationPage/NotificationPage.scss
@@ -10,7 +10,6 @@
     margin-top: 50px;
     padding-bottom: 5px;
     ion-card {
-      height: 59px;
       background: #ffffff;
       box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
       border-radius: 5px;
@@ -23,12 +22,14 @@
       .card-body-wrapper {
         display: inline-flex;
         margin-top: 5px;
-        .bar {
-          background-color: #3182b9;
-          width: 3px;
-          height: 40px;
-          position: fixed;
-        }
+        margin-left: 10px;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 15px;
+        color: #000000;
+        border-left: 3px solid red;
+
         .notification-text {
           margin-left: 10px;
           font-style: normal;
