--- a/src/pages/CoOperative/CoOperative.scss
+++ b/src/pages/CoOperative/CoOperative.scss
@@ -21,8 +21,10 @@
     margin-top: 10px;
   }
   .coperative-proceed-button {
-    width: 100px;
-    float: right;
-    margin-top: 10px;
+    width: 150px;
+    float: inline;
+    margin-top: 40px;
+    margin-left: 25%;
+    margin-bottom: 10%;
   }
 }
