--- a/src/pages/CoOperativeS/CoOperativeS.scss
+++ b/src/pages/CoOperativeS/CoOperativeS.scss
@@ -28,6 +28,7 @@
     }
     .coOperativeDetails-button {
       margin-top: 40px;
+      margin-bottom: 20px;
     }
     .coOperativeDetails-message {
       font-style: normal;
