--- a/src/pages/Agent/Agent.scss
+++ b/src/pages/Agent/Agent.scss
@@ -20,8 +20,10 @@
     margin-top: 40px;
   }
   .agent-proceed-button {
-    width: 100px;
-    float: right;
+    width: 150px;
+    float: inline;
     margin-top: 40px;
+    margin-left: 25%;
+    margin-bottom: 25px;
   }
 }
