--- a/src/pages/Shopping/ShoppingPage.scss
+++ b/src/pages/Shopping/ShoppingPage.scss
@@ -36,6 +36,30 @@
       padding: 10px !important;
     }
   }
+  .scroll-items-wrapper {
+    display: flex;
+    justify-content: space-between;
+    div {
+      width: 60px;
+    }
+    overflow-x: scroll;
+    ion-card {
+      background-color: rgb(255, 255, 255);
+      width: 50px;
+      height: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      ion-text {
+        font-weight: 600;
+        font-size: 10px;
+        position: absolute;
+        /* bottom: 0px; */
+        right: 16px;
+        top: 45px;
+      }
+    }
+  }
   .mobile-items-wrapper {
     padding: 20px;
     .item-wrapper {
