heading title css changes

--- a/src/pages/Accounts/Current/Current.scss
+++ b/src/pages/Accounts/Current/Current.scss
@@ -17,6 +17,7 @@
         .account-no-text {
           color: #ffffff;
           margin-top: 20px;
+          font-weight: 600;
         }
       }
     }
