--- a/src/pages/Accounts/Fixed/Fixed.scss
+++ b/src/pages/Accounts/Fixed/Fixed.scss
@@ -16,7 +16,8 @@
         padding-top: 25px;
         .account-no-text {
           color: #ffffff;
-          margin-top: 20px;
+          margin-top: 20px; 
+          font-weight: 600;
         }
       }
     }
