--- a/src/pages/Accounts/Saving/Saving.scss
+++ b/src/pages/Accounts/Saving/Saving.scss
@@ -17,6 +17,7 @@
         .account-no-text {
           color: #ffffff;
           margin-top: 20px;
+          font-weight: 600;
         }
       }
     }
@@ -27,7 +28,7 @@
       background-color: #3182b9;
       color: #ffffff;
       display: flex;
-      justify-content: center;
+      justify-content: center; 
       flex-direction: column;
 
       .SavingSection-0,
