--- a/src/pages/Bank/Bank.scss
+++ b/src/pages/Bank/Bank.scss
@@ -10,6 +10,7 @@
     display: flex;
     margin-top: 20px;
     color: #ffffff;
+    font-weight: 600;
   }
   .bank-wrapper {
     margin-top: 30px;
@@ -24,3 +25,4 @@
     margin-left: 25%;
   }
 }
+ 
