--- a/src/pages/CoOperative/CoOperative.scss
+++ b/src/pages/CoOperative/CoOperative.scss
@@ -9,6 +9,7 @@
     padding: 0px;
     margin-top: 20px;
     color: #ffffff;
+    font-weight: 600;
   }
   .coperative-wrapper {
     margin-top: 30px;
