--- a/src/pages/NotificationPage/NotificationPage.scss
+++ b/src/pages/NotificationPage/NotificationPage.scss
@@ -5,6 +5,7 @@
   .page-header-text {
     margin-top: 15px;
     margin-left: 13px;
+    font-weight: 600;
   }
   .notification-cards-wrapper {
     margin-top: 50px;
