--- a/src/pages/AccountPage/AccountPage.scss
+++ b/src/pages/AccountPage/AccountPage.scss
@@ -7,6 +7,8 @@
   height: 100%;
   .header-text-area {
     color: #ffffff;
+    font-weight: 600;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
   }
   .header-text-bottom {
     display: flex;
@@ -16,4 +18,12 @@
     font-size: small;
     color: #ffffff;
   }
+}
+
+.page-wrapper{
+  margin-top: 10%;
+}
+
+.button-gap{
+  margin-top:20px;
 }
