--- a/src/pages/Agent/Agent.scss
+++ b/src/pages/Agent/Agent.scss
@@ -10,6 +10,7 @@
     display: flex;
     margin-top: 20px;
     color: #ffffff;
+    font-weight: 600;
   }
   .agent-page-wrapper {
     margin-top: 30px;
