--- a/src/pages/SignUp/SignUp.scss
+++ b/src/pages/SignUp/SignUp.scss
@@ -3,24 +3,19 @@ ion-content {
 }
 .signup-container {
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  align-items: center;
-  /* padding: 15px; */
   height: 100%;
   padding-bottom: 30px;
   padding-left: 25px;
   padding-right: 25px;
+  margin-top: 30px;
   .royality-text-header {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    /* margin-top: 20px; */
     position: relative;
 
     .body-header-text-wrapper {
       display: flex;
-      align-items: center;
+     align-items: center;
       justify-content: center;
       margin-top: 50px;
       color: #ffffff;
@@ -30,12 +25,13 @@ ion-content {
     }
     .header-bold {
       font-size: 18px;
-      font-weight: 500;
+      font-weight: 600;
       padding-left: 5px;
     }
   }
   .page-wrapper {
     width: 100%;
+    margin-top: 30px;
   }
   .login-link-wrapper {
     display: flex;
