font-family changes

--- a/src/pages/AccountPage/AccountPage.scss
+++ b/src/pages/AccountPage/AccountPage.scss
@@ -8,7 +8,7 @@
   .header-text-area {
     color: #ffffff;
     font-weight: 600;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-family: "Montserrat";
   }
   .header-text-bottom {
     display: flex;
