--- a/src/pages/AccountUser/AccountUser.scss
+++ b/src/pages/AccountUser/AccountUser.scss
@@ -1,5 +1,6 @@
 .user-details-container {
   padding: 30px;
+  font-family: "Montserrat";
   .page-header-text {
     color: #ffffff;
     font-style: normal;
