--- a/src/pages/ConfirmPage/ConfirmPage.scss
+++ b/src/pages/ConfirmPage/ConfirmPage.scss
@@ -17,6 +17,7 @@
     display: flex;
     justify-content: center;
     height: calc(100% - 180px);
+    font-family: "Montserrat";
     .icon-wrapper {
       width: 100%;
       display: flex;
