--- a/src/pages/Fund/Fund.scss
+++ b/src/pages/Fund/Fund.scss
@@ -4,6 +4,7 @@
   height: 100%;
   flex-direction: column;
   background-color: #3182b9;
+  font-family: "Montserrat";
   .fund-text-area {
     margin-top: 20px;
     font-style: normal;
