--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -4,8 +4,8 @@
   flex-direction: column;
   background-color: #3182b9;
   --ion-font-family: "Montserrat" !important;
-  // font-family: "Montserrat", sans-serif;
-  font-family:Roboto, "Helvetica Neue", sans-serif;
+  font-family: "Montserrat";
+  
 
   .logoContainer {
     flex: 1;
