--- a/src/pages/SignUp/SignUp.scss
+++ b/src/pages/SignUp/SignUp.scss
@@ -9,6 +9,7 @@ ion-content {
   padding-left: 25px;
   padding-right: 25px;
   margin-top: 30px;
+  font-family: "Montserrat";
   .royality-text-header {
     display: flex;
     position: relative;
@@ -32,6 +33,7 @@ ion-content {
   .page-wrapper {
     width: 100%;
     margin-top: 30px;
+    font-family: "Montserrat";
   }
   .login-link-wrapper {
     display: flex;
