--- a/src/pages/SuccessPage/SuccessPage.scss
+++ b/src/pages/SuccessPage/SuccessPage.scss
@@ -3,6 +3,7 @@
 }
 .confirm-page-wrapper {
   padding: 10px;
+  font-family: "Montserrat";
   ion-card {
     width: 100%;
     background-color: #ffffff;
