--- a/src/pages/Accounts/Current/Current.scss
+++ b/src/pages/Accounts/Current/Current.scss
@@ -7,6 +7,7 @@
   padding-top: 0px;
 }
 .current-account-wrapper {
+  font-family: "Montserrat";
   .current-wrapper {
     background-color: #3182b9;
     height: 100%;
