--- a/src/pages/Accounts/Fixed/Fixed.scss
+++ b/src/pages/Accounts/Fixed/Fixed.scss
@@ -7,6 +7,7 @@
   padding-top: 0px;
 }
 .fixed-account-wrapper {
+  font-family: "Montserrat";
   .fixed-wrapper {
     background-color: #3182b9;
     height: 100%;
