--- a/src/pages/Accounts/Saving/Saving.scss
+++ b/src/pages/Accounts/Saving/Saving.scss
@@ -7,6 +7,7 @@
   padding-top: 0px;
 }
 .saving-account-wrapper {
+  font-family: "Montserrat";
   .saving-wrapper {
     background-color: #3182b9;
     height: 100%;
