--- a/src/pages/Bank/Bank.scss
+++ b/src/pages/Bank/Bank.scss
@@ -6,6 +6,7 @@
   padding-right: 28px;
   flex-direction: column;
   background-color: #3182b9;
+  font-family: "Montserrat";
   .bank-text-area {
     display: flex;
     margin-top: 20px;
