--- a/src/pages/CoOperative/CoOperative.scss
+++ b/src/pages/CoOperative/CoOperative.scss
@@ -4,6 +4,7 @@
   height: 100%;
   flex-direction: column;
   background-color: #3182b9;
+  font-family: "Montserrat";
   .coperative-text-area {
     display: flex;
     padding: 0px;
