--- a/src/pages/MapPayment/PosPaymentPage.scss
+++ b/src/pages/MapPayment/PosPaymentPage.scss
@@ -8,7 +8,7 @@
   color: white;
   font-size: medium;
   margin-left: 5%;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat";
   font-weight: 550;
 }
 .PosSection-0 {
