--- a/src/pages/Mpin/Mpin.scss
+++ b/src/pages/Mpin/Mpin.scss
@@ -20,7 +20,7 @@
   align-items: center;
   flex-direction: column;
   height: 100%;
-
+  font-family: "Montserrat";
   .page-header {
     display: flex;
     justify-content: center;
