--- a/src/pages/NotificationPage/NotificationPage.scss
+++ b/src/pages/NotificationPage/NotificationPage.scss
@@ -2,6 +2,7 @@
   background-color: #ffffff;
   height: 100%;
   padding: 5px;
+  font-family: "Montserrat";
   .page-header-text {
     margin-top: 15px;
     margin-left: 13px;
