--- a/src/components/Accordion/Accordion.scss
+++ b/src/components/Accordion/Accordion.scss
@@ -1,23 +1,46 @@
 .accordion-wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: none;
+
+  // ion-icon{
+  //  margin-left: 30%;
+  // }
+
+  .ionmargin{
+    display: flex;
+    justify-content: space-around;
+  }
   ion-button {
-    width: 100%;
+
     height: 31px;
     --background: #004777;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 8px;
+    --border-radius: 8px;
     --background-activated: #004777;
+    align-items: center;
+  }
+  .rowclass1{
+    color:#777;
+    
+  }
+  .rowclass2{
+    color:rgb(7, 7, 7);
+    font-weight: 600;
+  }
+  ion-row{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 3%;
+    font-family: "Montserrat";
+    font-size: 15px;
   }
 
   .is-shown {
     width: 100%;
     background-color: #ffffff;
     border-radius: 8px;
-
-    height: 154px;
+    height: 150px;
     transition: height 0.25s ease-in;
   }
   .is-hidden {
@@ -25,4 +48,7 @@
     transition: height 0.25s ease-out;
     width: 100%;
   }
+}
+.button-inner{
+  justify-content: none;
 }
