--- a/src/pages/LoanSection/LoanType/LoanType.scss
+++ b/src/pages/LoanSection/LoanType/LoanType.scss
@@ -5,15 +5,20 @@
   padding-right: 28px;
   flex-direction: column;
   background-color: #3182b9;
+  font-family: "Montserrat";
+  
   .loan-type-text-area {
     font-style: normal;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 20px;
     color: #ffffff;
     margin-top: 30px;
+    font-weight: 600;
+    font-family: "Montserrat";
   }
   .loan-type-wrapper {
     margin-top: 40px;
+    text-align:start
   }
   .loanType-btn {
     margin-top: 90px;
