all font family changed

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -6,6 +6,6 @@
   --font-style: normal;
   --color: #ffffff;
   --font-weight: 500;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat";
   height: 30px;
 }
