--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -19,6 +19,6 @@
   ion-text {
     color: #ffffff;
     font-size: 18px;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat";
   }
 }
