--- a/src/components/Input/InputText.scss
+++ b/src/components/Input/InputText.scss
@@ -18,12 +18,12 @@
     font-size: 14px;
     line-height: 17px;
     color: #ffffff;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat";
   }
   ion-input {
     --placeholder-color: #ffffff;
     --color: #ffffff;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat";
   }
 
   .eye-btn {
