--- a/src/components/Radio/Radio.scss
+++ b/src/components/Radio/Radio.scss
@@ -1,6 +1,6 @@
 .radio-wrapper {
   ion-text {
-    font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat";
   }
   ion-radio {
     --color-checked: #ffffff;
