--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -4,7 +4,7 @@
     font-size: 14px;
     color: #ffffff;
     margin-left: 10px;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat";
   }
   ion-checkbox {
     --border-radius: 0px;
