--- a/src/pages/Routes.scss
+++ b/src/pages/Routes.scss
@@ -1,7 +1,5 @@
-body {
-}
 ion-content {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat";
   .inner-scroll scroll-y overscroll {
     padding: 0px !important;
   }
