Fight one way and two way page setup

--- a/src/pages/Utilitys/UtilityFlightBooking/FlightOneWay/FlightOneWay.scss
+++ b/src/pages/Utilitys/UtilityFlightBooking/FlightOneWay/FlightOneWay.scss
@@ -1,20 +1,21 @@
 .container {
+  margin-top: -24px;
   display: flex;
   height: 100%;
   padding-left: 28px;
   padding-right: 28px;
   flex-direction: column;
   background-color: #3182b9;
+  font-family: "Montserrat";
   .booking-oneWay-text-area {
     font-style: normal;
-    // font-weight: 600;
+    font-weight: 600;
     font-size: 16px;
     line-height: 20px;
     color: #ffffff;
-    margin-top: 30px;
+    font-family: "Montserrat";
   }
   .booking-oneWay-wrapper {
-    margin-top: 60px;
     .booking-section {
       display: flex;
       width: 100%;
@@ -26,7 +27,7 @@
     .flight-icon {
       display: flex;
       margin-right: 5px;
-      margin-top: 20px;
+      // margin-top: 20px;
     }
     .booking-to {
       display: flex;
@@ -37,7 +38,21 @@
     display: inline-block;
     width: 100;
   }
-  .booking-button {
-    margin-top: 20px;
+  .bookingButton {
+    margin-top: 35%;
+    color: red;
   }
+  .toggelButton {
+    color: white;
+  }
+}
+
+.allwidth {
+  width: "65%";
+}
+// .IonToggle {
+//   height: 60px;
+// }
+.toggle-inner {
+  --handle-background: red;
 }
