--- a/src/pages/Utilitys/UtilityTopUpRecharge/TopUpRecharge.scss
+++ b/src/pages/Utilitys/UtilityTopUpRecharge/TopUpRecharge.scss
@@ -1,8 +1,9 @@
 .container {
   display: flex;
-  height: 100%;
+  //height: 100%;
   padding-left: 28px;
   padding-right: 28px;
+  font-family: "Montserrat";
   flex-direction: column;
   background-color: #3182b9;
   .TopUpRecharge-text-area {
@@ -11,8 +12,11 @@
     line-height: 20px;
     color: #ffffff;
     margin-top: 30px;
+    font-size: 600;
+    font-family: "Montserrat";
   }
   .TopUpRecharge-wrapper {
-    margin-top: 20px;
+    margin-top: 39px;
+    padding-bottom: 40%;
   }
 }
